inserting post tables. form not working yet.

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -10,13 +10,24 @@
 <label for="title">Title</label>
 <input id="title" name="post_title" type="text">
 
+<div>
 <label for="body"> Body </label>
+<textarea id="body" name="post_body" type="text"></textarea>
+</div>
 
 
+<div>
+<label for="expires"> Expires on </label>
+<input id="expires" name="post_expires" type="date">
+</div>
+
+<button> Add post </button>
+
+</form>
  
 
 <hr>
 <!--Enter Active and Expired Posts Lists-->
-
+<h2>
 
 <hr>
