--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -21,6 +21,9 @@
 <input id="expires" name="post_expires" type="date">
 </div>
 
+<input type="hidden" value="<%=@the_board.id%>" name="query_board_id" id="hidden
+_board">
+
 <button> Add post </button>
 
 </form>
@@ -73,4 +76,3 @@ Expired posts
 <hr>
 
 <!--testing area-->
-
